# verified-hillclimbing-db

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  ROADMAP.md  TODOS.md  TODOs.md  benchmark_duckdb.py  dbcli  dbcli.sh  loop_prompt_for_later.md  pyproject.toml  queries.py  reprocess_experiments.py  run_batch.sh  run_duckdb_and_load_extension_and_sbb_dataset.sh  run_experiments.py  test_full_q7.dfy  test_q7.dfy  test_transpiler_functional.py  test_transpiler_unit.py  transpiler.py  writeup_plan.md
data/benchmarks/: benchmark_environment.json  scaling_results.json  tpch_sf1_results.json
db_extension/: DEMO.md  __init__.py  catalog.py  dbcli.py  optimizer.py  plan.md  prepare_data.py  run_optimizer.py  test_extension.py  utils.py
db_extension/queries/: q2.sql  q3.sql
db_extension/src/: hillclimbing.cpp
design_docs/: hybrid_bitvector_int_design.md
docs/: verified_benchmark_rundown.md
research_loop/: COMPILATION_GUIDE.md  PIPELINE_IMPROVEMENTS.md  README.md  admit_runquery.py  agent_sandbox.py  agent_scratchpad.md  assemble_runquery.py  benchmark_duckdb.py  benchmark_runqueries.py  benchmark_scaling.py  benchmark_tpch.py  benchmark_verified.py  config.env  harness.py  native.dfy  pipeline_columnar.py  pipeline_demo.py  pipeline_log.py  postprocessor.py  reprocess_experiments.py  run_batch.sh  run_experiments.py  ssb_workload.py  test_postprocessor.py  tpch_workload.py
research_loop/bench_bare/: Cargo.toml
research_loop/bench_bare/src/: bench_q.rs  bench_tpch.rs  q1.rs  q11.rs
scripts/: demo.sh  demo_lib.py  export_tpch_lineitem.py  generate_benchmark_overview_plot.py  reprocess_experiments.py  run_batch.sh
transpiler/: README.md  pyproject.toml
transpiler/src/sql_transpiler/: __init__.py  agg_push.py  agg_push_str.py  column_projection.py  queries.py  transpiler.py
transpiler/tests/: test_functional.py  test_unit.py
(+14 files in other folders)
