[project]
name = "verified-hillclimbing-db"
version = "0.1.0"
description = "Verified hill-climbing query optimizer using Dafny formal proofs and native Rust compilation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sql-transpiler",
    "pytest>=9.1.1",
]

[tool.uv.workspace]
members = ["transpiler"]

[tool.uv.sources]
sql-transpiler = { workspace = true }
