[project]
name = "sql-transpiler"
version = "0.1.0"
description = "SQL-to-Dafny transpiler for verified query optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=30.11.0",
]

[project.optional-dependencies]
test = ["pytest>=9.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_transpiler"]
