[package]
name = "bench_bare"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench_q1"
path = "src/q1.rs"

[[bin]]
name = "bench_q11"
path = "src/q11.rs"

[[bin]]
name = "bench_q"
path = "src/bench_q.rs"

[[bin]]
name = "bench_tpch"
path = "src/bench_tpch.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"